# read-bazel

./: README.md  go.mod  go.sum  main.go
input/: BUILD.bazel
